[package]
name = "prollytree-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
prollytree = { path = "../prollytree" } # Assuming prollytree is another crate you have locally

[dependencies.clap]
version = "3.0"
features = ["derive"]

[[bin]]
name = "prollytree-cli"
path = "src/main.rs"

